@startuml
'https://plantuml.com/class-diagram

skinparam classAttributeIconSize 0
skinparam linetype ortho

interface DataIterator{
+ getNext(): String
+ hasNext(): boolean
+ isLast(): boolean
}

interface IterableCollection{
+ createIterator(): DataIterator
}

class SenSorIterator{
- list: ArrayList
+ SenSorIterator(list: ArrayList)
+ getNext(): String
+ hasNext(): boolean
+ isLast(): boolean
}

class DataCollection{
+ createIterator(): DataIterator
}

class DataAnalyzeSystem{
}

SenSorIterator ..|> DataIterator
SenSorCollection ..|> IterableCollection
IterableCollection ..> DataIterator
DataCollection ..> SenSorIterator
DataAnalyzeSystem ..> SenSorIterator
DataAnalyzeSystem ..> DataCollection
@enduml